# fastducc

./: .gitignore  README.md  bkup.py  pyproject.toml  scrap.py  sketch.py
fastducc/: #ms_utils.py#  .gitignore  __init__.py  candidates.py  catalogues.py  cli.py  constants.py  core.py  detection.py  ducc_continuum_img.py  fastducc_run.py  fastducc_run_old.py  fd_types.py  filters.py  imaging.py  kernels.py  ms_utils.py  nufft_periodicity.py  types.py  wcs.py
fastducc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fastducc/catalogues/psrcat/: psrcat_south.csv
