[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastducc"
version = "0.1.0"
description = "Imaging and transient detection utilities"
authors = [{ name = "Andrew Zic" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "numba",
  "tqdm",
  "matplotlib",
  "astropy",
  "scipy",
  "ducc0>=0.40",
]

[project.scripts]

fastducc = "fastducc.cli:main"
fastducc-run = "fastducc.fastducc_run:main"
ducc-continuum-img = "fastducc.ducc_continuum_img:main"

[tool.setuptools]
packages = ["fastducc"] 

[tool.setuptools.packages.find]
include = ["fastducc*"]

[tool.setuptools.package-data]
fastducc = [
  "catalogues/VERSION",
  "catalogues/psrcat/*.csv",
  "catalogues/racs/*.xml"
]
